; ModuleID = '/home/carl/AnghaBench/openssl/apps/lib/extr_apps.c_app_load_config.c'
source_filename = "/home/carl/AnghaBench/openssl/apps/lib/extr_apps.c_app_load_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FORMAT_TEXT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @app_load_config(i8* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = load i32, i32* @FORMAT_TEXT, align 4
  %8 = call i32* @bio_open_default(i8* %6, i8 signext 114, i32 %7)
  store i32* %8, i32** %4, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %19

12:                                               ; preds = %1
  %13 = load i32*, i32** %4, align 8
  %14 = load i8*, i8** %3, align 8
  %15 = call i32* @app_load_config_bio(i32* %13, i8* %14)
  store i32* %15, i32** %5, align 8
  %16 = load i32*, i32** %4, align 8
  %17 = call i32 @BIO_free(i32* %16)
  %18 = load i32*, i32** %5, align 8
  store i32* %18, i32** %2, align 8
  br label %19

19:                                               ; preds = %12, %11
  %20 = load i32*, i32** %2, align 8
  ret i32* %20
}

declare dso_local i32* @bio_open_default(i8*, i8 signext, i32) #1

declare dso_local i32* @app_load_config_bio(i32*, i8*) #1

declare dso_local i32 @BIO_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
